Fixed profile edit updating wrong fields and weird table spacing.

--- a/application/themes/default/sass/main.scss
+++ b/application/themes/default/sass/main.scss
@@ -1311,3 +1311,9 @@ iframe[src="about:blank"]{ display: none !important; }
 		}
 	}
 }
+.ac-form-warning td {
+	padding: 0 !important;
+	border: 0 !important;
+	font-weight: bold;
+	color: #c25372;
+}
